[project]
name            = "aisteer360"
version         = "0.1.2"
description     = "AI Steerability 360 Toolkit"
readme          = "README.md"
license         = { text = "Apache-2.0" }
authors         = [{ name = "IBM Research" }]
maintainers     = [
    { name = "Erik Miehling", email = "erik.miehling@ibm.com" },
    { name = "Praveen Venkateswaran", email = "praveen.venkateswaran@ibm.com" },
    { name = "Inge Vejsbjerg", email = "INGEVEJS@ie.ibm.com" }
]
keywords = [
    "language models",
    "steerability",
    "prompt engineering",
    "activation steering",
    "parameter-efficient fine-tuning",
    "decoding-time alignment"
]

requires-python = ">=3.11.0"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

# core
dependencies = [
    "absl-py>=2.2.2,<3.0.0",
    "accelerate>=1.3.0,<2.0.0",
    "datasets>=3.5.0,<4.0.0",
    "gdown==5.2.0",
    "immutabledict>=4.2.1,<5.0.0",
    "langdetect==1.0.9",
    "matplotlib>=3.8.0,<4.0.0",
    "mergekit==0.0.5.1",
    "nltk>=3.9.1,<4.0.0",
    "notebook>=7.4.5",
    "numpy>=1.16.0",
    "pandas>=2.2.3,<3.0.0",
    "peft>=0.15.2,<0.16.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "torch>=2.5.1,<3.0.0",
    "transformers>=4.52.0,<5.0.0",
    "tqdm>=4.66.5,<5.0.0",
    "tabulate>=0.9.0",
    "trl>=0.16.1,<0.17.0",
]

# optional groups
[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocs-include",
    "mkdocstrings[python]",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
    "mkdocs-include-markdown-plugin",
    "mkdocs-bibtex",
]

dev = [
    "pytest>=8.3.2,<9.0.0",
    "pre-commit>=4.3.0"
]

# tools
[tool.uv.build-backend]
module-root = ""
module-name = "aisteer360"

[tool.uv]
override-dependencies = ["accelerate==1.3.0"]

# build
[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
